@startuml

interface Builder{
    + buildPart1():void
    + buildPart2():void
    + buildPart3():void
    + retrieveResult():product
}


class Product{
    - part1:String
    - part2:String
    - part3:String
}



Class ConcreteBuilder1{
    + buildPart1():void
    + buildPart2():void
    + buildPart3():void
    + retrieveResult():product
}

Class ConcreteBuilder2{
    + buildPart1():void
    + buildPart2():void
    + buildPart3():void
    + retrieveResult():product
}


Class Director{
    + Director(builder:Builder)
    + construct():void
}

Director o-right--> Builder
Product <.. Builder
ConcreteBuilder1 ..^ Builder
ConcreteBuilder2 ..^ Builder
@enduml